data/derived/fa15/progs/unify/prog2210.ml.out
Characters 103-104:
  | Sine t       -> sin(pi*.t)
                            ^
Error: This expression has type expr but an expression was expected of type
         float
